# deepagents-runner

./: .gitignore  CLAUDE.md  DEMO.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE4_OPTION_A_UX.md  README.md  SPECKIT_COMPARISON.md  pyproject.toml  requirements.txt
config/: .env.example
specs/001-deepagents-runner/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-deepagents-runner/checklists/: requirements.md
specs/001-deepagents-runner/contracts/: runner-api.yaml
specs/002-speckit-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-speckit-integration/checklists/: requirements.md
specs/002-speckit-integration/contracts/: clarification-api.yaml  planning-api.yaml  validation-api.yaml
src/agents/: alex-accessibility.md  andy-api-designer.md  archie-architect.md  aria-ux-architect.md  bobby-backend.md  colin-code-reviewer.md  dana-database.md  derek-devops.md  diana-docs.md  donna-data-engineer.md  felicia-frontend.md  generic-agent.md  ian-integration.md  iris-infrastructure.md  molly-mobile.md  monica-monitoring.md  neil-test-engineer.md  paula-performance.md  pete-project-manager.md  quinn-qa.md  riley-reliability.md  sam-security.md
src/deepagents_runner/: __init__.py  cli.py
src/deepagents_runner/core/: __init__.py  agents.py  commands.py  config.py  context.py  state.py
src/deepagents_runner/llm/: anthropic_provider.py  base.py  factory.py  openai_provider.py
src/deepagents_runner/models/: __init__.py  feature.py  workflow.py
src/deepagents_runner/terminal/: repl.py  (+1 more)
(+4 files in other folders)
