[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepagents-runner"
version = "1.0.0"
description = "Interactive terminal for executing SpecKit commands using DeepAgents"
authors = [
    {name = "DeepAgents Runner Contributors"}
]
readme = "README.md"
requires-python = ">=3.11"
keywords = ["deepagents", "speckit", "agents", "cli", "terminal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "deepagents>=0.1.0",
    "anthropic>=0.25.0",
    "openai>=1.0.0",
    "rich>=13.0.0",
    "python-frontmatter>=1.0.0",
    "tenacity>=8.0.0",
    "gitpython>=3.1.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
deepagents-runner = "deepagents_runner.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
